# payments-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  security.yml
src/: csv_handler.rs  engine.rs  errors.rs  main.rs  models.rs
tests/: cli.rs  integration_tests.sh
tests/data/: 00-basic.csv  00-basic.expected.csv  01-disputes.csv  02-negative_deposit.csv  03-double_dispute.csv  04-interleaved_clients.csv  04-interleaved_clients.expected.csv  05-dispute_with_insufficient_funds.csv  05-dispute_with_insufficient_funds.expected.csv  06-unknown_disputes.csv  07-dispute-withdrawal.csv  08-withdraw-overheld.csv  08-withdraw-overheld.expected.csv  09-locked-account.csv  09-locked-account.expected.csv  10-finalized-actions.csv  10-finalized-actions.expected.csv  11-mixed-csv.csv  11-mixed-csv.expected.csv
