# Cargo.toml
[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.219"
csv = "1.3.1"
serde_derive = "1.0"
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
